--- a/package.json
+++ b/package.json
@@ -10,9 +10,17 @@
     "@types/node": "^16.18.11",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "@types/styled-components": "^5.1.26",
+    "polished": "^4.2.2",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "sass": "^1.57.1",
+    "styled-components": "^5.3.6",
+    "styled-normalize": "^8.0.7",
+    "styled-reset": "^4.4.5",
+    "swiper": "^8.4.6",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
   },
